# router-hosts

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .rumdl.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Dockerfile  Dockerfile.ci  Dockerfile.ci.operator  Dockerfile.duckdb  Dockerfile.goreleaser  Dockerfile.operator  Dockerfile.release  Dockerfile.release-duckdb  Dockerfile.release-operator  README.md  Taskfile.go.yml  Taskfile.yml  buf.gen.yaml  buf.yaml  cog.toml  dist-workspace.toml  docker-compose.yml  go.Dockerfile  go.mod  go.sum  lefthook.yaml  manifest  mkdocs.yml  release-please-config.json  release-plz.toml
.beads/: issues.jsonl  metadata.json
.devcontainer/: Dockerfile  Dockerfile.duckdb  devcontainer-duckdb.json  devcontainer.json  post-create.sh
.github/: actionlint.yaml  renovate.json
.github/workflows/: ci-go.yml  ci.yml  claude-code-review.yml  claude.yml  cleanup-images.yml  docker.yml  docs.yml  helm-release.yml  pr-checks.yml  release-please.yml  release-plz.yml  release.yml  v-release.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
charts/router-hosts-operator/: Chart.yaml  README.md  values.yaml
cmd/operator/: main.go
cmd/router-hosts/: main.go
crates/router-hosts/: Cargo.toml
crates/router-hosts-client/: Cargo.toml
crates/router-hosts-client/src/: config.rs  main.rs
crates/router-hosts-common/: Cargo.toml  build.rs
crates/router-hosts-common/src/: lib.rs  proto.rs  validation.rs
crates/router-hosts-duckdb/: Cargo.toml
crates/router-hosts-duckdb/src/: main.rs
crates/router-hosts-e2e/: Cargo.toml  README.md
crates/router-hosts-e2e/src/: certs.rs  cli.rs  container.rs  lib.rs
crates/router-hosts-e2e/tests/: e2e_tests.rs
crates/router-hosts-e2e/tests/scenarios/: auth_failures.rs  daily_operations.rs  disaster_recovery.rs  initial_setup.rs  mod.rs
crates/router-hosts-operator/: Cargo.toml
crates/router-hosts-operator/src/: client.rs  config.rs  deletion.rs  health.rs  hostmapping.rs  leader.rs  lib.rs  main.rs  matcher.rs  resolver.rs
crates/router-hosts-operator/src/controllers/: hostmapping.rs  ingress.rs  ingressroute.rs  ingressroutetcp.rs  mod.rs  retry.rs  service.rs
crates/router-hosts-server/: Cargo.toml
crates/router-hosts-server/src/: config.rs  main.rs
crates/router-hosts-storage/: Cargo.toml
crates/router-hosts-storage/migrations/postgres/: 20231223000000_initial_schema.sql  20251223000000_initial_schema.sql
crates/router-hosts-storage/migrations/sqlite/: 20231223000000_initial_schema.sql  20251223000000_initial_schema.sql
crates/router-hosts-storage/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/router-hosts-storage/src/backends/: duckdb.rs  mod.rs
crates/router-hosts-storage/src/backends/duckdb/: event_store.rs  mod.rs  projection.rs  schema.rs  snapshot_store.rs
crates/router-hosts-storage/src/backends/postgres/: event_store.rs  mod.rs  projection.rs  schema.rs  snapshot_store.rs
crates/router-hosts-storage/src/backends/sqlite/: event_store.rs  mod.rs  projection.rs  schema.rs  snapshot_store.rs
crates/router-hosts-storage/tests/: duckdb_backend.rs  postgres_backend.rs  sqlite_backend.rs
crates/router-hosts-storage/tests/common/: event_store_tests.rs  host_projection_tests.rs  mod.rs  snapshot_store_tests.rs
crates/router-hosts/src/: lib.rs  main.rs  test_utils.rs
crates/router-hosts/src/client/: config.rs  error.rs  grpc.rs  mod.rs  output.rs
crates/router-hosts/src/client/commands/: host.rs  mod.rs  snapshot.rs
crates/router-hosts/src/server/: commands.rs  commands.rs.bak  config.rs  export.rs  hooks.rs  hosts_file.rs  import.rs  mod.rs  propagation.rs  session.rs  tracing_setup.rs  write_queue.rs
crates/router-hosts/src/server/acme/: cert_writer.rs  client.rs  config.rs  env_expand.rs  http_challenge.rs  mod.rs  renewal.rs
crates/router-hosts/src/server/acme/dns_provider/: cloudflare.rs  mod.rs  webhook.rs
crates/router-hosts/src/server/db/: event_store.rs  events.rs  hosts.rs  mod.rs  projections.rs  schema.rs  schema_v2.rs  snapshots.rs
crates/router-hosts/src/server/metrics/: counters.rs  mod.rs  otel.rs  prometheus.rs
crates/router-hosts/src/server/service/: bulk.rs  health.rs  hosts.rs  mod.rs  sessions.rs  snapshots.rs
crates/router-hosts/tests/: acme_test.rs  dns_provider_test.rs  integration_test.rs
docs/: acme.md  architecture.md  e2e-testing.md  index.md  operations.md  operator.md  releasing.md  requirements.txt  test-coverage-audit.md  troubleshooting.md
docs/adr/: README.md  router-hosts-4w2-sacrifice-getattime-time-travel-across-compaction.md  router-hosts-bzg-use-unbound-static-per-name-zones-not-zone-wide-or-typetrans.md  router-hosts-v5b-compact-aggregates-via-hostcompacted-seed-event.md  router-hosts-vl8-scope-compaction-manual-remediate-observe.md
docs/architecture/: event-sourcing.md
docs/contributing/: architecture.md  index.md  releasing.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md
docs/guides/: acme.md  index.md  kubernetes.md  operations.md  storage-backends.md
docs/plans/: 2025-11-28-initial-project-setup.md  2025-11-28-router-hosts-design.md  2025-11-30-server-completion-design.md  2025-11-30-server-implementation.md  2025-12-01-export-hosts-impl.md  2025-12-01-import-hosts-impl.md  2025-12-01-proto-alignment-design.md  2025-12-01-router-hosts-v1-design.md  2025-12-01-v1-tasks.md  (+45 more)
e2e/: docker_e2e_test.go  e2e_test.go  helpers_test.go
examples/: .env.example  README.md  client.toml.example  docker-compose.vault-agent.yml  generate-certs-vault.sh  generate-certs.sh  server.toml.example  setup-vault-approle.sh  setup-vault-pki.sh  vault-agent-config.hcl.example
proto/: hosts.proto
scripts/: generate-cli-docs.sh  generate-proto-docs.sh  verify-release.sh
(+164 files in other folders)
