[workspace]
resolver = "2"

members = [
    "crates/router-hosts-common",
    "crates/router-hosts",
    "crates/router-hosts-e2e",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["fzymgc-house"]
license = "MIT"
repository = "https://github.com/fzymgc-house/router-hosts"
homepage = "https://github.com/fzymgc-house/router-hosts"
description = "Rust CLI tool for managing DNS host entries on routers via gRPC"

[workspace.dependencies]
# gRPC and protobuf
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# Download pre-built protoc binary (much faster than compiling from source)
dlprotoc = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures = "0.3"

# Database (bundled build for self-contained compilation)
duckdb = { version = "1.1", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
parking_lot = "0.12"
csv = "1.3"

[workspace.lints.clippy]
# Deny common mistakes per CLAUDE.md best practices
# Note: Some lints relaxed during initial setup (dead_code, todo, unimplemented)
# These will be enforced once implementation is complete
unwrap_used = "warn"        # Will be "deny" after skeleton phase
expect_used = "warn"        # Will be "deny" after skeleton phase
panic = "deny"
todo = "warn"               # Will be "deny" after skeleton phase
unimplemented = "warn"      # Will be "deny" after skeleton phase

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"             # Thin LTO balances optimization vs build time
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols to reduce binary size
