[workspace]
resolver = "2"

members = [
    "crates/router-hosts-common",
    "crates/router-hosts",
    "crates/router-hosts-duckdb",
    "crates/router-hosts-e2e",
    "crates/router-hosts-storage",
    "crates/router-hosts-operator",
]

[workspace.package]
version = "0.8.11"
edition = "2021"
authors = ["fzymgc-house"]
license = "MIT"
repository = "https://github.com/fzymgc-house/router-hosts"
homepage = "https://github.com/fzymgc-house/router-hosts"
description = "Rust CLI tool for managing DNS host entries on routers via gRPC"

[workspace.dependencies]
# gRPC and protobuf
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# Download pre-built protoc binary (much faster than compiling from source)
dlprotoc = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures = "0.3"

# Database (bundled build for self-contained compilation)
duckdb = { version = "1.1", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
parking_lot = "0.12"
csv = "1.3"
libc = "0.2"            # Unix system calls (SIGHUP for cert reload)

# Testing
proptest = "1.5"
wiremock = "0.6"

# Random number generation (for ACME renewal jitter)
rand = "0.9"

# ACME certificate management
instant-acme = "0.8"
rcgen = "0.14"       # Certificate generation for ACME
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http1", "aws-lc-rs"] }
http-body-util = "0.1"
regex = "1.11"       # For ${VAR} expansion parsing
x509-parser = "0.18" # Certificate expiry parsing for renewal
async-trait = "0.1"  # For dyn-compatible async traits in DNS providers

# Metrics and observability
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", features = ["http-listener"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

[workspace.lints.clippy]
# Deny common mistakes per CLAUDE.md best practices
# Note: Some lints relaxed during initial setup (dead_code, todo, unimplemented)
# These will be enforced once implementation is complete
unwrap_used = "warn"        # Will be "deny" after skeleton phase
expect_used = "warn"        # Will be "deny" after skeleton phase
panic = "deny"
todo = "warn"               # Will be "deny" after skeleton phase
unimplemented = "warn"      # Will be "deny" after skeleton phase

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"             # Thin LTO balances optimization vs build time
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols to reduce binary size
