[package]
name = "router-hosts-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
router-hosts-common = { path = "../router-hosts-common" }

tonic.workspace = true
prost.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true
