[package]
name = "router-hosts-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# IP address validation
regex = "1.10"

[build-dependencies]
tonic-build.workspace = true
protobuf-src.workspace = true
