[package]
name = "router-hosts-e2e"
version = "0.1.0"
edition = "2021"
publish = false
description = "End-to-end acceptance tests for router-hosts"

[dependencies]
rcgen = "0.13"
testcontainers = "0.23"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros", "time"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# This crate IS the test infrastructure - tests are in tests/ directory
