[package]
name = "router-hosts-e2e"
version.workspace = true
edition.workspace = true
publish = false
description = "End-to-end acceptance tests for router-hosts"

[dependencies]
rcgen = "0.14"
testcontainers = "0.26"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread", "macros", "time"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# This crate IS the test infrastructure - tests are in tests/ directory
