[package]
name = "router-hosts-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for syncing Ingress hostnames to router-hosts"

[dependencies]
router-hosts-common = { path = "../router-hosts-common" }

# Async traits
async-trait.workspace = true

# Kubernetes
kube = { version = "2.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.26", features = ["v1_34"] }
kube-leader-election = "0.42"

# Async
tokio.workspace = true
futures.workspace = true

# gRPC
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
schemars = "1.0"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging/tracing
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Utilities
regex.workspace = true
chrono.workspace = true

# Health check HTTP server
axum = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tower = "0.5"
http = "1"
http-body-util = "0.1"
bytes = "1"
serial_test = "3.2"
