[package]
name = "router-hosts-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
router-hosts-common = { path = "../router-hosts-common" }

tonic.workspace = true
prost.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
duckdb.workspace = true

[dev-dependencies]
tempfile = "3.8"
