[package]
name = "router-hosts-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage abstraction layer for router-hosts"

[dependencies]
# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["rt", "sync"] }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# IDs
ulid = { workspace = true }

# URL parsing
url = "2"

# Synchronization
parking_lot = { workspace = true }

# Backend implementations (at least one required)
duckdb = { workspace = true, optional = true }
# sqlx provides both PostgreSQL and SQLite backends
# Note: rusqlite removed to avoid libsqlite3-sys version conflicts with sqlx
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "chrono"], optional = true }

# Logging
tracing = { workspace = true }

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]
# SQLite uses sqlx instead of rusqlite to avoid native library conflicts
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
