[package]
name = "router-hosts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
router-hosts-common = { path = "../router-hosts-common" }

# CLI and async runtime
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Server-specific dependencies
uuid.workspace = true
ulid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
duckdb.workspace = true

[dev-dependencies]
tempfile = "3.8"
