[package]
name = "router-hosts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
router-hosts-common = { path = "../router-hosts-common" }
router-hosts-storage = { path = "../router-hosts-storage" }

# CLI and async runtime
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true

# gRPC
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }
prost.workspace = true
prost-types.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs = "6"

# Server-specific dependencies
uuid.workspace = true
ulid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
duckdb.workspace = true
parking_lot.workspace = true
csv.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
rcgen = "0.14"
