[package]
name = "router-hosts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
router-hosts-common = { path = "../router-hosts-common" }
router-hosts-storage = { path = "../router-hosts-storage", default-features = false, features = ["sqlite", "postgres"] }

# CLI and async runtime
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true

# gRPC
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }
prost.workspace = true
prost-types.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs = "6"

# Server-specific dependencies
uuid.workspace = true
ulid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
csv.workspace = true
rustls-pemfile.workspace = true

# ACME support
regex.workspace = true
instant-acme.workspace = true
rcgen.workspace = true
reqwest.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
rustls.workspace = true
x509-parser.workspace = true
rand.workspace = true
async-trait.workspace = true
sha2 = "0.10"
base64 = "0.22"

# Unix system calls (for SIGHUP cert reload)
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
testcontainers = "0.26"
reqwest = { workspace = true }
rcgen.workspace = true
time = "0.3"
rustls.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
proptest.workspace = true
wiremock.workspace = true

[lints.rust]
# Allow tarpaulin_include cfg for coverage exclusions
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
